Fix forkme <a> visibility

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ padding-top: 0px;
 	box-shadow: 0px 0px 1ex Green;
 }
 
-a {
+a.btn {
     padding: 10px 25px 10px 25px;
     color: #f4f4f4;
     background: #3296d0;
@@ -38,7 +38,7 @@ a {
     text-decoration: none;
     display: inline-block;
 }
-a:hover {
+a.btn:hover {
     background: #2f8abf;
     text-decoration: underline;
 }
